# spdb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  repomix-output.md
.github/: copilot-instructions.md
.github/workflows/: docs.yml  flow.yml
docs/source/: _toc.yml  api_reference.md  conf.py  contributing.md  getting_started.md  index.md  installation.md  license.md  testing.md
my_spdb/: core.py  models.py  test_my_spdb.py
scripts/: replace_placeholders.py  test_replace_placeholders.py
spdb/: __init__.py  base.py  error.py  expander.py  mocks.py  model.py  provider.py
spdb_example/: core.py  models.py
tests/: conftest.py  test_example.py  test_integration.py  test_model.py  test_my_spdb.py  test_provider.py
tests/data/: Application.json  Role.json  Server.json  Team.json
